checking before we start making changes to enums for java 15 support